--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/react": "^16.9.17",
+    "next": "^9.3.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "webpack": "^4.42.1"
+  },
   "devDependencies": {
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@types/node": "^13.1.7",
+    "@types/styled-components": "^4.4.3",
+    "typescript": "^3.7.5"
   },
   "keywords": [],
   "author": "",
