--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@types/react": "^16.9.17",
+    "express": "^4.17.1",
     "next": "^9.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "socket.io": "^2.3.0",
     "styled-components": "^5.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.1"
