--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "paths": {
       "@video-stream": [
         "../asm-video-chat/pkg/video_chat.js"
+      ],
+      "@components/*": [
+        "./components/*"
       ]
     }
   },
