--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "socket.io": "^2.3.0",
-    "styled-components": "^5.0.0",
+    "styled-components": "^5.1.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.1"
   },
   "devDependencies": {
     "@types/node": "^13.1.7",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.4.3",
     "typescript": "^3.7.5"
   },
